Changelog for JVCL 3.0
======================
2004-11-17:
  Changed JclZlibMultiple.pas to use the new JclCompression.pas // (rom)
2004-11-07:
- Added the Config Manager API conversion and updated the Setup API conversion.
  Components updated to use the Ansi version of the Setup API functions. // (rom)
2004-11-06:
- The package generator now uses a condition parser to allow complex expressions to be used.
  This has no impact on C++ Builder packages, but all Delphi packages were updated to reflect
  the change: no more IFDEFs are present in the output generated by pg.  // obones
2004-11-05:
- Added the ability for TJvLogFile to save content automatically and limit size to a set value. 
  All this is off by default  // obones
2004-11-04:
- Added packages and support files for Delphi2005 (D9) // peter3
2004-11-01:
- Support for drawing HTML text in a more generic fashion (support functions in JvJVCLUtils) // peter3
- Previous HTML routines in JvHTControls now only calls equivalent in JvJVCLUtils // peter3
- Added custom drawing to JvPrint and also a PrintHTML function // peter3
2004-10-24
- TJvCustomMenuItemPainter.DrawText renamed to DrawItemText to avoid problems in C++ Builder
  (see JvMenus.pas for further details) // obones
2004-09-15
- Added FitCell property to JvDBGrid (Pete Stove and Fred) // obones
- JvButton is no longer registered on the palette. Use JvImgBtn or JvBitbtn instead. This change happened a long time ago, but has not been documented. // peter3
2004-09-14
- JvFormStorage now has two new properties: StoredValuesPath and StoredPropsPath controling
  the path prefix to add for StoredProps and StoredValues. These should not be left empty
  if there is a risk to have duplicates names between StoredProps and StoredValues // obones
- For some unknown reason, JvDBGridFooter MUST come after any other JvDBGrid related 
  unit or dcc32 from BCB6 crashes  // obones
2004-09-13